# OptSFC-Explainable

./: LICENSE  a2c_explain.csv  all_train_explain.ipynb  demo.py  dqn_explain.csv  envelope_explain.csv  eupg_explain.csv  evaluate_all.py  evaluate_envelope.ipynb  morl_single_step.py  ppo_explain.csv  pyproject.toml  rdx_evaluate.py  rdx_single_step.py  readme.md  requirements.txt  shap_argmax_evaluate.py  shap_env_evaluate.py  shap_evaluate.py  single_step.py  train_Envelope_explain.py
apg_silver_argmax_outputs/: silver_apg_a2c_assignments.csv  silver_apg_dqn_assignments.csv  silver_apg_envelope_assignments.csv  silver_apg_eupg_assignments.csv  silver_apg_ppo_assignments.csv
apg_silver_env_outputs/: silver_apg_a2c_env_assignments.csv  silver_apg_dqn_env_assignments.csv  silver_apg_envelope_env_assignments.csv  silver_apg_eupg_env_assignments.csv  silver_apg_ppo_env_assignments.csv
apg_silver_env_outputs_raw/: analyze_top_apg_edges.py  silver_apg_a2c_env_assignments.csv  silver_apg_dqn_env_assignments.csv  silver_apg_envelope_env_assignments.csv  silver_apg_eupg_env_assignments.csv  silver_apg_ppo_env_assignments.csv  top_10_apg_edges.csv
data/: a2c_explain.csv  dqn_explain.csv
optsfc/: __init__.py
optsfc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
rdx_evaluation_plots/: summary_table.csv
shap_env_outputs/: shap_a2c_policy_prob_env.csv  shap_a2c_policy_prob_env_summary.csv  shap_dqn_scalar_Q_env.csv  shap_dqn_scalar_Q_env_summary.csv  shap_envelope_Q_network_env.csv  shap_envelope_Q_network_env_summary.csv  shap_envelope_Q_resource_env.csv  (+9 more)
(+312 files in other folders)
